tests/src/frontend/syntax/invalid/duplicate_modifiers_parameter.sk
class C(private private p: String) {}

fun main(): String {
  C("Fail").p
}
